--- a/packages/ritext/src/global.css
+++ b/packages/ritext/src/global.css
@@ -58,7 +58,7 @@
     }
 
     .ProseMirror a.link {
-        @apply text-blue-500 font-extrabold dark:text-blue-400;
+        @apply text-blue-500 font-extrabold dark:text-blue-400 cursor-pointer;
     }
 
     .ProseMirror mark {
@@ -211,5 +211,53 @@
 
     .reactjs-tiptap-editor .ProseMirror .search-result-current {
         background-color: #0dff0080;
+    }
+
+    .tiptap :first-child {
+        margin-top: 0;
+    }
+
+    /* List styles */
+    .tiptap ul,
+    .tiptap ol {
+        padding: 0 1rem;
+        margin: 1.25rem 1rem 1.25rem 0.4rem;
+    }
+
+    .tiptap ul li p,
+    .tiptap ol li p {
+        margin-top: 0.25em;
+        margin-bottom: 0.25em;
+    }
+
+    /* Task list specific styles */
+    .tiptap ul[data-type='taskList'] {
+        list-style: none;
+        margin-left: 0;
+        padding: 0;
+    }
+
+    .tiptap ul[data-type='taskList'] li {
+        align-items: flex-start;
+        display: flex;
+    }
+
+    .tiptap ul[data-type='taskList'] li > label {
+        flex: 0 0 auto;
+        margin-right: 0.7rem;
+        user-select: none;
+    }
+
+    .tiptap ul[data-type='taskList'] li > div {
+        flex: 1 1 auto;
+        margin-top: -2px;
+    }
+
+    .tiptap ul[data-type='taskList'] input[type='checkbox'] {
+        cursor: pointer;
+    }
+
+    .tiptap ul[data-type='taskList'] ul[data-type='taskList'] {
+        margin: 0;
     }
 }
